Controller Messages: finish api add swagger
