# lib/babiecaq_web/controllers/messages_controller.ex
@@ -1,4 +1,5 @@
 defmodule BabiecaqWeb.MessagesController do
+  require Logger
   use BabiecaqWeb, :controller
   alias BabiecaqWeb.Controllers.Utils
   use PhoenixSwagger
@@ -9,7 +10,7 @@ defmodule BabiecaqWeb.MessagesController do
     PhoenixSwagger.Path.delete "/api/config/topic/{topic_name}/messages"
     summary "Delete messages of Topic"
     description "Delete all messages of Topic by topic_name"
-    tag "Config Messages"
+    tag "Messages"
     parameters do
       topic_name :path, :string, "name of topic"
     end
@@ -19,4 +20,37 @@ defmodule BabiecaqWeb.MessagesController do
   def delete(conn, %{"topic_name" => topic_name}) do
     Utils.json_response(conn, Babiecaq.BabiecaQClient.delete_messages_of_topic(topic_name), 203, 404)
   end
+
+  swagger_path :get do
+    PhoenixSwagger.Path.get "/api/config/topic/{topic_name}/messages/{user_name}"
+    summary "Get message of Topic"
+    description "Get messages of Topic by topic_name"
+    tag "Messages"
+    parameters do
+      topic_name :path, :string, "name of topic"
+      user_name :path, :string, "name of user"
+    end
+    response 200, "{status: ok, info: message}"
+    response 404, "{status: error, info: User: {user_name} not exist or info: Topic: {topic_name} not exist}"
+  end
+  def get(conn, %{"topic_name" => topic_name, "user_name" => user_name}) do
+    Utils.json_response(conn, Babiecaq.BabiecaQClient.consumer_pull(user_name, topic_name), 200, 404)
+  end
+
+  swagger_path :create do
+    PhoenixSwagger.Path.post "/api/config/topic/{topic_name}/messages"
+    summary "Add message of Topic"
+    description "Add messages of Topic by topic_name"
+    tag "Messages"
+    parameters do
+      topic_name :path, :string, "name of topic"
+      message :query, :string, "message to insert in the topic "
+    end
+    response 200, "{status: ok, info: The message has been insert in {topic_name}}"
+    response 404, "{status: error, info: information to error}"
+  end
+  def create(conn, %{"topic_name" => topic_name, "message" => msg}) do
+    Utils.json_response(conn, Babiecaq.BabiecaQClient.add_message_2_topic(msg, topic_name), 200, 404)
+  end
+
 end
